--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/outfit": "^5.0.5"
+		"@fontsource/outfit": "^5.0.5",
+		"class-variance-authority": "^0.6.1"
 	}
 }
