--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/outfit": "^5.0.5",
-		"chrome-aws-lambda": "^10.1.0",
+		"@sparticuz/chromium": "112",
 		"class-variance-authority": "^0.6.1",
 		"ethers": "^6.6.2",
-		"puppeteer-core": "^20.8.1"
+		"puppeteer-core": "^19.8.0"
 	}
 }
