--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/outfit": "^5.0.5",
-		"@sparticuz/chromium": "112",
 		"class-variance-authority": "^0.6.1",
-		"ethers": "^6.6.2",
-		"puppeteer-core": "^19.8.0"
+		"ethers": "^6.6.2"
 	}
 }
