--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@fontsource/outfit": "^5.0.5",
 		"class-variance-authority": "^0.6.1",
-		"ethers": "^6.6.2"
+		"ethers": "^6.6.2",
+		"puppeteer": "^20.8.1"
 	}
 }
