--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/outfit": "^5.0.5",
+		"aes-js": "^3.1.2",
 		"class-variance-authority": "^0.6.1",
 		"ethers": "^6.6.2",
 		"puppeteer": "^20.8.1"
