--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@fontsource/outfit": "^5.0.5",
 		"class-variance-authority": "^0.6.1",
 		"ethers": "^6.6.2",
+		"nft.storage": "^7.1.0",
 		"node-forge": "^1.3.1",
 		"puppeteer": "^20.8.1"
 	}
